k8s/cloud/overlays/exposed_services_nginx/cloud_ingress_grpcs.yaml
## Replace all occurrences of pixie.example.com with the custom domain name you wish to use
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress-grpcs
  namespace: plc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pixie.example.com
    - work.pixie.example.com
    secretName: cloud-proxy-tls-certs
  rules:
  - host: pixie.example.com
    http:
      paths:
      - path: /pl.cloudapi.(.*)
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.services.(.*)
        pathType: Prefix
        backend:
          service:
            name: vzconn-service
            port:
              number: 51600
      - path: /px.cloudapi.(.*)
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 51200
      - path: /px.api.(.*)
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 4444
  - host: work.pixie.example.com
    http:
      paths:
      - path: /pl.cloudapi.(.*)
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.services.(.*)
        pathType: Prefix
        backend:
          service:
            name: vzconn-service
            port:
              number: 51600
      - path: /px.cloudapi.(.*)
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 51200
      - path: /px.api.(.*)
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 4444
